# ds-star

./: .gitignore  README.md  app.py  config.yaml  dsstar.py  dsstar_assistants.py  project_summary.txt  prompt.yaml  provider.py  pyproject.toml  run_app.bat
