[project]
name = "ds-star"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "google-generativeai>=0.8.0",
    "pydantic>=2.12.0",
    "PyYAML>=6.0",
    "tqdm>=4.67.0",
    "requests>=2.32.0",
    "openai>=2.8.1",
    "pandas>=2.3.3",
    "openpyxl>=3.1.5",
    "ollama>=0.6.1",
    "gradio>=5.22.0",
    "plotly>=5.20.0",
    "matplotlib>=3.8.0",
    "openai-agents>=0.0.15",
]

[project.scripts]
dsstar = "dsstar:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["dsstar.py"]

